@@ -1,0 +1,2 @@
+home=/fakehome
+shell=/fakeshell
