@@ -1,0 +1,2 @@
+home=/home
+shell=/bin/sh
