@@ -1,0 +1,2 @@
+groups="mygroup,anothergroup"
+home="/myhome"
